[tool.poetry]
name = "data-leakage-demo"
version = "0.1.0"
description = ""
authors = ["Jack Coutts <jackwgcoutts@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
